--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         ax = accelerationX;
         if (ax < axHigh) {
         axHigh = ax;
-        document.getElementById('ax').innerHTML = "A Accel = " + ax;
+        document.getElementById('ax').innerHTML = "A Accel = " + axHigh;
         }
         rx = rotationX;
         document.getElementById('rx').innerHTML = "X rotation = " + rx; 
